# syspass-permissions-tool

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  docker-compose.yml  import.xml-sample  sim.yml-dist  spt.yml-dist
.cargo/: config
docs/: Architecture.md  Dev.md  Install.md  Troubleshooting.md  Usage.md
src/: cache.rs  config.rs  logging.rs  main.rs  types.rs  xml.rs
src/cache/: mod.rs
src/feature/: perms.rs
src/feature/perms/: get.rs  mod.rs  set.rs
src/syspass/: login.rs  mod.rs  perms.rs  search.rs
src/tests/: account.rs  mod.rs
test-data/: import.xml  invalid.xml  spt.yml
