[package]
name = "syspass-permissions-tool"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
anyhow = "1"

log = "0.4"
log4rs = "1.1.1"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.14"

[dev-dependencies]
env_logger = "0.10.0"
fake = "2"
