[package]
name = "syspass-permissions-tool"
version = "0.5.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
anyhow = "1"

log = "0.4"
log4rs = "1.1.1"

clap = { version = "4.0.29", features = ["derive"] }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.14"
serde_json = "1.0.91"

quick-xml = "0.26.0"

tokio = { version = "1.23", features = ["full"] }
thirtyfour = "0.31.0"

html_parser = "0.6.3"

[dev-dependencies]
env_logger = "0.10.0"
fake = "2"
tempfile = "3.3.0"
